styles for link inside the about

--- a/app/components/content/AboutModal/style.scss
+++ b/app/components/content/AboutModal/style.scss
@@ -7,10 +7,14 @@
     align-items: flex-start;
 
     .right {
-      padding: 40px 75px;
+      padding: 40px 40px;
 
       .wrapper {
         margin-bottom: 1em;
+
+        a {
+          text-decoration: underline;
+        }
       }
 
       img {
