added cluster for impact layer

--- a/app/components/content/ImpactLegend/style.scss
+++ b/app/components/content/ImpactLegend/style.scss
@@ -18,6 +18,10 @@
         li {
           margin-left: 5px;
         }
+
+        &.legend circle {
+          fill: #F9781C;
+        }
       }
     }
   }
