--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -2,7 +2,8 @@ $programColors: (
   overall: #F9781C,
   hum: #DB1469,
   wee: #129EAD,
-  srmh: #FF595A,
+  // srmh: #FF595A,
+  srmh: #d07475,
   lffv: #FFB403,
   fnscc: #99B74D,
   default: #B3B1AF,
