--- a/app/components/svg/style.scss
+++ b/app/components/svg/style.scss
@@ -14,7 +14,14 @@ svg.circle {
 
 svg.circle.shadow {
   border-radius: 50%;
-  box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.45);
+}
+
+svg.circle.bordered {
+  circle {
+    stroke: white;
+    stroke-width: 4;
+  }
 }
 
 svg.rhombus.shadow {
