--- a/app/styles/prunecluster.scss
+++ b/app/styles/prunecluster.scss
@@ -43,25 +43,33 @@
 }
 
 .prunecluster-medium {
-	background-color: #f1d357;
-	background-color: rgba(241, 211, 87, 0.6);
+	// background-color: #f1d357;
+	// background-color: rgba(241, 211, 87, 0.6);
+  background-color: #b5e28c;
+  background-color: rgba(181, 226, 140, 0.6);
 }
 
 .prunecluster-medium div {
-	background-color: #f0c20c;
-	background-color: rgba(240, 194, 12, 0.6);
+	// background-color: #f0c20c;
+	// background-color: rgba(240, 194, 12, 0.6);
+  background-color: #6ecc39;
+  background-color: rgba(110, 204, 57, 0.6);
 }
 
 .prunecluster-large {
-	background-color: #fd9c73;
-	background-color: rgba(253, 156, 115, 0.6);
+	// background-color: #fd9c73;
+	// background-color: rgba(253, 156, 115, 0.6);
+  background-color: #b5e28c;
+  background-color: rgba(181, 226, 140, 0.6);
 }
 
 .prunecluster-large div {
 	width: 34px;
 	height: 34px;
-	background-color: #f18017;
-	background-color: rgba(241, 128, 23, 0.6);
+	// background-color: #f18017;
+	// background-color: rgba(241, 128, 23, 0.6);
+  background-color: #6ecc39;
+  background-color: rgba(110, 204, 57, 0.6);
 }
 
 .prunecluster-large div span {
