--- a/app/components/content/ImpactLegend/style.scss
+++ b/app/components/content/ImpactLegend/style.scss
@@ -56,7 +56,8 @@
 
         &.legend-cluster {
           display: block;
-          margin-bottom: 15px;
+          margin-top: 0;
+          margin-bottom: 0;
 
           > li {
             margin-left: 0;
@@ -64,7 +65,7 @@
           }
 
           > li:last-child {
-            border-top: 1px dashed rgba(0, 0, 0, .1);
+            // border-top: 1px dashed rgba(0, 0, 0, .1);
             padding-top: 9px;
             margin-top: 3px;
             margin-left: 3px;
@@ -93,21 +94,10 @@
     }
   }
 
-  // ul.legend-cluster {
-  //   &.-vertical {
-  //     display: block;
-  //   }
-
-  //   > li {
-  //     margin-right: 10px;
-  //   }
-
-  //   > li:last-child {
-  //     margin-right: 15px;
-  //   }
-  // }
-
   .marker-icon {
+    $cluster-bg: white;
+    $cluster-color: #0015F2;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,13 +123,13 @@
     }
 
     &.-less {
-      background-color: #6ecc39;
-      box-shadow: 0 0 0 4px rgba(110, 204, 57, 0.6);
+      background-color: $cluster-bg;
+      box-shadow: 0 0 0 4px rgba($cluster-color, 0.75);
     }
 
     &.-more {
-      background-color: #f0c20c;
-      box-shadow: 0 0 0 4px rgba(241, 211, 87, 0.6);
+      background-color: $cluster-bg;
+      box-shadow: 0 0 0 4px rgba($cluster-color, 0.75);
     }
   }
 
