--- a/app/styles/prunecluster.scss
+++ b/app/styles/prunecluster.scss
@@ -1,5 +1,10 @@
+$cluster-bg: white;
+$cluster-color: #0015F2;
+
 .prunecluster {
 	font-size: 12px;
+  font-weight: bold;
+  color: $cluster-color;
 	border-radius: 20px;
 	transition: all 0.3s linear;
 }
@@ -12,7 +17,7 @@
 .leaflet-zoom-anim .leaflet-zoom-animated.leaflet-marker-icon,
 .leaflet-zoom-anim .leaflet-zoom-animated.leaflet-marker-shadow,
 .leaflet-zoom-anim .leaflet-zoom-animated.leaflet-markercluster-icon {
-    transition: transform 0.25s cubic-bezier(0,0,0.25,1);
+  transition: transform 0.25s cubic-bezier(0,0,0.25,1);
 }
 .prunecluster div {
 	width: 30px;
@@ -27,15 +32,16 @@
 }
 
 .prunecluster-small {
-	background-color: #b5e28c;
-	background-color: rgba(181, 226, 140, 0.6);
+	background-color: $cluster-color;
+	background-color: rgba($cluster-color, 0.75);
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
 }
 
 .prunecluster-small div {
 	width: 28px;
 	height: 28px;
-	background-color: #6ecc39;
-	background-color: rgba(110, 204, 57, 0.6);
+	background-color: $cluster-bg;
+	background-color: $cluster-bg;
 }
 
 .prunecluster-small div span {
@@ -43,33 +49,27 @@
 }
 
 .prunecluster-medium {
-	// background-color: #f1d357;
-	// background-color: rgba(241, 211, 87, 0.6);
-  background-color: #b5e28c;
-  background-color: rgba(181, 226, 140, 0.6);
+	background-color: $cluster-color;
+  background-color: rgba($cluster-color, 0.75);
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
 }
 
 .prunecluster-medium div {
-	// background-color: #f0c20c;
-	// background-color: rgba(240, 194, 12, 0.6);
-  background-color: #6ecc39;
-  background-color: rgba(110, 204, 57, 0.6);
+	background-color: $cluster-bg;
+  background-color: $cluster-bg;
 }
 
 .prunecluster-large {
-	// background-color: #fd9c73;
-	// background-color: rgba(253, 156, 115, 0.6);
-  background-color: #b5e28c;
-  background-color: rgba(181, 226, 140, 0.6);
+	background-color: $cluster-color;
+  background-color: rgba($cluster-color, 0.75);
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.6);
 }
 
 .prunecluster-large div {
 	width: 34px;
 	height: 34px;
-	// background-color: #f18017;
-	// background-color: rgba(241, 128, 23, 0.6);
-  background-color: #6ecc39;
-  background-color: rgba(110, 204, 57, 0.6);
+	background-color: $cluster-bg;
+  background-color: $cluster-bg;
 }
 
 .prunecluster-large div span {
