--- a/app/components/content/ImpactLegend/style.scss
+++ b/app/components/content/ImpactLegend/style.scss
@@ -5,26 +5,35 @@
   position: relative;
 }
 
-#legend-impact {
-  font-size: 14px;
+.legend-collapse {
+  position: absolute;
+  right: 0;
+  top: -24px;
+
+  // border: 1px solid #F9781C;
+  border: 1px solid #E3E3E3;
+  cursor: pointer;
+  padding: 5px 10px;
+  background-color: #FFFFFF;
+  // box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.15);
+  outline: 0;
+  z-index: 0;
+  white-space: nowrap;
+
+  &:hover {
+    color: white;
+    background-color: #F9781C;
+  }
+}
+
+.legend-impact-wrapper {
   min-width: 346px;
 
-  .legend-collapse {
-    // border: 1px solid #F9781C;
-    border: 1px solid #E3E3E3;
-    cursor: pointer;
-    padding: 5px 10px;
-    background-color: #FFFFFF;
-    // box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.15);
-    outline: 0;
-    position: relative;
-    z-index: 0;
-
-    &:hover {
-      color: white;
-      background-color: #F9781C;
-    }
-  }
+  border: 1px solid $accent-color-5;
+  box-shadow: 0 0 7px 0 rgba(209,203,203,0.44);
+  background-color: white;
+  padding: 12px 20px 12px 12px;
+  font-size: 14px;
 
   > .legend-collapse {
     position: absolute;
