--- a/app/components/areas/Header/style.scss
+++ b/app/components/areas/Header/style.scss
@@ -21,6 +21,14 @@
       li {
         margin-left: 40px;
       }
+
+      @media #{$mq-mobile} {
+       li {
+        margin-left: 0;
+        padding-right: 5px;
+        padding-left: 5px;
+       }
+      }
     }
 
     a {
@@ -42,6 +50,12 @@
       display: block;
       margin-right: 40px;
       cursor: pointer;
+    }
+
+    @media #{$mq-mobile} {
+     img {
+      margin-right: 5px;
+     }
     }
   }
 
