--- a/app/components/elements/AreaSummary/style.scss
+++ b/app/components/elements/AreaSummary/style.scss
@@ -14,10 +14,12 @@
 
     .react-select__control {
       color: $font-color-4;
+      min-width: 70px;
       margin-bottom: 5px;
-      min-width: 80px;
       font-size: 16px;
-      border: 1 solid $font-color-4;
+      border: none;
+      border-radius: 0;
+      border-bottom: 1px solid #FED6BA;
     }
 
     .react-select__control--is-focused {
@@ -26,6 +28,7 @@
 
     .react-select__single-value {
       color: $font-color-1;
+      bottom: 0;
     }
     .react-select__indicator-separator {
       display: none;
@@ -33,6 +36,7 @@
 
     .react-select__indicator {
       color: $font-color-1;
+      padding: 0;
     }
 
     span.react {
@@ -44,10 +48,8 @@
       text-transform: uppercase;
       padding-bottom: 7px;
     }
-    > * {
-      padding: 0 5px;
-    }
   }
-
-
+  span.area-summary-data {
+    padding-left: 5px;
+  }
 }
