--- a/app/components/elements/AreaSummary/style.scss
+++ b/app/components/elements/AreaSummary/style.scss
@@ -1,12 +1,20 @@
 @import "styles/colors.scss";
-@import "styles/fonts.scss";
+@import "styles/values.scss";
 
 .c-area-summary {
   &.reach {
-    display: flex;
       > span {
         margin: auto 0;
       }
+  }
+  .area-summary-wrapper {
+    display: flex;
+    align-items: baseline;
+    @media #{$mq-mobile} {
+      > span {
+        display: block;
+      }
+     }
   }
 
   .select-menu {
