Select theme color changed

--- a/app/components/elements/AreaSummary/style.scss
+++ b/app/components/elements/AreaSummary/style.scss
@@ -34,7 +34,15 @@
       background-color:rgba(240, 120, 28, 0.1);;
     }
 
-    .react-select__single-value {
+    .react-select__menu {
+      color: $font-color-1;
+      > * {
+        color: $font-color-1;
+      }
+    }
+
+    .react-select__single-value,
+    .react-select__single-value--is-focused {
       color: $font-color-1;
       bottom: 0;
     }
