other impact added to impact siderbar

--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -6,6 +6,7 @@ $programColors: (
   srmh: #d07475,
   lffv: #FFB403,
   fnscc: #99B74D,
+  other: #005d7b,
   default: #B3B1AF,
 );
 
@@ -16,6 +17,7 @@ $choroColors: (
   srmh: #FCE5E6 #FFC4C5 #FF8B8D #F95659 #E30004,
   lffv: #FEF3D9 #FFE9B4 #FFD46C #FFB400 #CE9200,
   fnscc: #EDFFDC #D3FAAE #B0E180 #86B15C #4A7A1C,
+  other: #99becb #008bb9 #007ca4 #006c90 #005d7b,
 );
 
 $bg-color-1: #FFFFFF;
